USING(OpenSceneGraph)
Using(Boost)

ADD_DEFINITIONS(
)

INCLUDE_DIRECTORIES(
  ${OPENSCENEGRAPH_INCLUDE_DIRS}
)

SET(HEADERS
  createPagedLOD.h
)

SET(SOURCES
  createPagedLOD.cpp
)


ADD_COVISE_EXECUTABLE(createPagedLOD)

TARGET_LINK_LIBRARIES(createPagedLOD coUtil ${EXTRA_LIBS} ${OPENSCENEGRAPH_LIBRARIES})

COVISE_INSTALL_TARGET(createPagedLOD)
