#CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
#PROJECT (vtrans)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
SET(BUILD_UNIT_TESTS OFF CACHE BOOL "Specifies whether to build unit tests.")

IF (BUILD_UNIT_TESTS)
    ADD_DEFINITIONS(-D_GTEST_ENABLED)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY (gtest-1.6.0)
ENDIF(BUILD_UNIT_TESTS)

ADD_SUBDIRECTORY (vtrans)

IF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
ADD_SUBDIRECTORY (nvtrans)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")

IF (BUILD_SHARED_VTRANS_LIBS)
MESSAGE(AUTHOR_WARNING "\nBuilding shared nvtrans\nTests disabled!\n")
ENDIF (BUILD_SHARED_VTRANS_LIBS)

IF (BUILD_UNIT_TESTS AND NOT BUILD_SHARED_VTRANS_LIBS)
    ADD_SUBDIRECTORY (test) 
ENDIF (BUILD_UNIT_TESTS AND NOT BUILD_SHARED_VTRANS_LIBS)
