USING(MPI)
USING(VTK optional)

IF(NOT OPENSCENEGRAPH_FOUND)
  RETURN()
ENDIF()

ADD_DEFINITIONS(-DMPI_COVER)

SET(SOURCES
  ../main/OpenCOVERMain.cpp
)

IF(APPLE)
   SET(EXTRA_LIBS ${EXTRA_LIBS} "-framework AppKit")
   set(SOURCES ${SOURCES} ../main/osx-util.mm)
ENDIF(APPLE)

ADD_COVISE_MODULE(Renderer OpenCOVER.mpi)
COVISE_ADJUST_OUTPUT_DIR(OpenCOVER.mpi "" bin)

TARGET_LINK_LIBRARIES(OpenCOVER.mpi  coOpenCOVER
      ${COVISE_VRBCLIENT_LIBRARY} ${COVISE_GRMSG_LIBRARY}
      ${COVISE_UTIL_LIBRARY}
      ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})
qt_use_modules(OpenCOVER.mpi Core)
COVISE_INSTALL_TARGET(OpenCOVER.mpi)

