USING(MPI)

IF(NOT OPENSCENEGRAPH_FOUND)
  RETURN()
ENDIF()

PROJECT(OpenCOVER CXX C)
ADD_DEFINITIONS(-DMPI_COVER)

SET(SOURCES
  ../main/OpenCOVERMain.cpp
)

ADD_COVISE_MODULE(Renderer OpenCOVER.mpi ${SOURCES} ${HEADERS})
COVISE_ADJUST_OUTPUT_DIR(OpenCOVER.mpi "" bin)

TARGET_LINK_LIBRARIES(OpenCOVER.mpi  coOpenCOVER
      ${COVISE_VRBCLIENT_LIBRARY} ${COVISE_GRMSG_LIBRARY}
      ${COVISE_UTIL_LIBRARY} ${COVISE_NET_LIBRARY}
      ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})
IF(COVISE_USE_QT)
  qt_use_modules(OpenCOVER.mpi Core)
ENDIF(COVISE_USE_QT)
COVISE_INSTALL_TARGET(OpenCOVER.mpi)

